Layer sculpt with Multires crashes (when using "Persistent") #20376

Closed
opened 2009-12-14 10:44:25 +01:00 by Martin Buerbaum · 3 comments

%%%* Start Blender

  • Add multires to the default cube
  • Enter Sculpt mode
  • Select "Layer"
  • Set "- Persistent" (Sometimes it helps to also click on "Set Persistent Base". Just try alternately selecting/pressing the two.)
  • Draw on the mesh => Crash

There is also the problem that sculpting with "Layer" in Multires does basically nothing. (this is independant from the "Persistent" settings)

These problems do NOT seem to occur when not using Multires.

Blender 2.5 Revision 25357
Windows XP Professional 2002 SP3%%%

%%%* Start Blender * Add multires to the default cube * Enter Sculpt mode * Select "Layer" * Set "- [x] Persistent" (Sometimes it helps to also click on "Set Persistent Base". Just try alternately selecting/pressing the two.) * Draw on the mesh => Crash There is also the problem that sculpting with "Layer" in Multires does basically nothing. (this is independant from the "Persistent" settings) These problems do NOT seem to occur when not using Multires. Blender 2.5 Revision 25357 Windows XP Professional 2002 SP3%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%This combination is not working yet, but at least fixed the crash now:
http://www.blender.org/development/release-logs/blender-250/sculpt-and-multiresolution/%%%

%%%This combination is not working yet, but at least fixed the crash now: http://www.blender.org/development/release-logs/blender-250/sculpt-and-multiresolution/%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#20376
No description provided.