Fix #20376: crash with layer sculpt and multires. This is not working yet, at least prevents the crash for now.